INT-1090: Add ITs for Resources (#48)